# SmartHomeBuddy

./: .gitignore  .prettierignore  Makefile  README.md  dev-setup.md
backend/: pyproject.toml
backend/smarthomebuddy/: main.py
device-identifier/: Pipfile  README.md  cli.py  device_identifier_server.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
device-identifier/.run/: pytest shbdeviceidentifier.run.xml
device-identifier/shbdeviceidentifier/: __init__.py  app.py  collect_traffic.py  commands.py  countermeasures.py  dataloader.py  db.py  main.py  model.py  models.py  rpc.py
device-identifier/shbdeviceidentifier/ml_models/: RandomForest_v0.pkl  random_forest.py
device-identifier/shbdeviceidentifier/models/: random_forest.py
device-identifier/shbdeviceidentifier/pcaps/: dummy.csv  dummy.pcap  dummy_labels.json
device-identifier/shbdeviceidentifier/rpc/: client.py  config.py  heartbeat.py  server.py
device-identifier/shbdeviceidentifier/rpc/proto/: devices_database_pb2.py  devices_database_pb2_grpc.py  heartbeat_pb2.py  heartbeat_pb2_grpc.py  pcap_database_pb2.py  pcap_database_pb2_grpc.py  read_pb2.py  read_pb2_grpc.py
device-identifier/shbdeviceidentifier/utilities/: __init__.py  app_utilities.py  capture_utilities.py  logging_utilities.py  ml_utilities.py  progress_bar.py  queries.py
device-identifier/shbdeviceidentifier/utilities/queries/: custom_query.sql
device-identifier/shbdeviceidentifier/utilities/query_files/: custom_query.py  custom_query_flux.py  (+2 more)
device-identifier/smarthomebuddy/: main.py
device-identifier/smarthomebuddy/proto/: heartbeat_pb2.py
device-identifier/tests/: conftest.py  test_commands.py  test_dataloader.py  test_db.py
(+126 files in other folders)
