[project]
name = "shbdeviceidentifier"
version = "1.0.0"
authors = [
    { name = "Tobias Becher", email = "TPB.DevAcc@gmail.com" },
    { name = "Johannes Jestram", email = "jambalaya_jo@posteo.ch" }
]
description = "Backend to SmartHomeBuddy"
readme = "README.md"
# license = { file="LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GPLv3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/jo-jstrm/SmartHomeBuddy"
"Bug Tracker" = "https://github.com/jo-jstrm/SmartHomeBuddy/issues"

[build-system]
requires = ["setuptools", "wheel", "cython"]

[tool.setuptools.package-data]
shbdeviceidentifier = ["utilities/queries/*.sql", "utilities/queries/*.flux"]

[project.scripts]
shbdeviceidentifier = "shbdeviceidentifier.app:app"

[tool.black]
line-length = 120